--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.10",
     "@ai-sdk/openai": "^1.3.10",
-    "ai": "^4.3.5"
+    "ai": "^4.3.5",
+    "firebase": "^11.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.1"
