--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
-    "@ai-sdk/google": "^1.2.12",
-    "@ai-sdk/openai": "^1.3.16",
-    "ai": "^4.3.9",
+    "@ai-sdk/google": "^1.2.14",
+    "@ai-sdk/openai": "^1.3.21",
+    "@ai-sdk/xai": "^1.2.15",
+    "ai": "^4.3.12",
     "firebase": "^11.6.0"
   },
   "devDependencies": {
