--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@ai-sdk/google": "^2.0.5",
     "@ai-sdk/openai": "^2.0.11",
     "@ai-sdk/xai": "^2.0.6",
+    "@neondatabase/serverless": "^1.0.2",
     "ai": "^5.0.11",
     "firebase": "^12.1.0"
   },
